--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -70,12 +70,13 @@
             width: 24px;
             height: 24px;
         }
-
     }
     &-empty {
+        width: 100%;
+        text-align: center;
         font-size: .875rem;
         background: #e8e8e8;
-        padding: 1rem 2rem;
+        padding: 1.5rem 2rem;
     }
 }
 
